setting html and body relative + backface-visibility hidden to try and prevent the white flash when keyboard is opened in mobile

--- a/src/_main.sass
+++ b/src/_main.sass
@@ -6,6 +6,7 @@ html, body
     padding: 0
     overflow: hidden
     background-color: rgb(var(--background))
+    position: relative
 
 body
     width: 100%
@@ -32,6 +33,7 @@ body
     -ms-user-select: none
     user-select: none
     -webkit-tap-highlight-color: rgba(0,0,0,0)
+    -webkit-backface-visibility: hidden
 
 p, a
     font-size: 1.5vh
